messing with styling

--- a/src/TownList.css
+++ b/src/TownList.css
@@ -1,4 +1,4 @@
-card .btn {
+/* card .btn {
   border-radius: 2em;
   background-color: #602320 !important;
   color: #ffffff;
@@ -11,4 +11,4 @@ card .btn {
   color: #ffffff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   transform: scale(1.01);
-}
+} */
