--- a/src/Review.css
+++ b/src/Review.css
@@ -10,3 +10,8 @@
 .review-card .button {
   padding-top: 5px;
 }
+
+.review-card-header {
+  background-color: #eb8c00 !important;
+  color: white !important;
+}
