some card styling fixes

--- a/src/BreweryList.css
+++ b/src/BreweryList.css
@@ -10,3 +10,12 @@
     margin: 15px;
 }
 
+
+
+.brew-cards .card img {
+max-width: 200px;
+  max-height: 142px;
+  border-radius: 50%;
+  margin: 5px auto;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
