--- a/src/About.css
+++ b/src/About.css
@@ -1,5 +1,5 @@
 .card img {
-  width: 80%;
+  max-height: 225px;
   border-radius: 50%;
   margin: 0 auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -40,10 +40,3 @@
 .github {
   margin-right: 5px;
 }
-
-/* body .background {
-    background-image: url('./bg.png');
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-} */
