--- a/src/Review.css
+++ b/src/Review.css
@@ -27,5 +27,6 @@
 }
 
 .form-check-input:focus {
+  border-color: #a32020 !important;
   box-shadow: 0 0 0 0.25rem rgba(163, 32, 32, 0.25) !important;
 }
