--- a/src/Search.css
+++ b/src/Search.css
@@ -1,15 +1,9 @@
-#form-div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 2em;
-}
-
 .search-header {
+  text-align: center;
   border-style: double;
   border-radius: 2em;
   border-color: #dc6900;
+  margin: 1% 28%;
 }
 
 .search-header img {
@@ -17,6 +11,14 @@
   height: 100px;
   margin: 0px 15px;
   padding: 3px 3px;
+}
+
+.form-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2em;
 }
 
 .form-label {
@@ -50,7 +52,7 @@
   transform: scale(1.01) !important;
 }
 
-#accordion-div {
+.accordion-div {
   margin: 0% 20%;
 }
 
