--- a/src/About.css
+++ b/src/About.css
@@ -1,5 +1,6 @@
 .card img {
-  max-height: 225px;
+  max-height: 180px;
+  max-width: 195px;
   border-radius: 50%;
   margin: 0 auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
