town feature photo edit

--- a/src/FeaturedTowns.css
+++ b/src/FeaturedTowns.css
@@ -7,8 +7,8 @@
 }
 
 .town-header img {
-  width: 120px;
-  height: 120px;
+  width: 225px !important;
+  height: 200px !important;
   padding: 3px 3px;
 }
 
