--- a/src/About.css
+++ b/src/About.css
@@ -1,6 +1,6 @@
-.card img {
-  max-height: 180px;
-  max-width: 195px;
+.card .about-card-image {
+  max-height: 210px;
+  max-width: 225px;
   border-radius: 50%;
   margin: 0 auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -33,7 +33,6 @@
 }
 
 .card:hover {
-  /* Scale the card up by 5% when hovered */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2) !important;
   transform: scale(1.05);
 }
