--- a/src/BreweryList.css
+++ b/src/BreweryList.css
@@ -20,7 +20,7 @@
 
 .website-button {
   position: absolute;
-  bottom: 10px; /* Adjust as necessary */
+  bottom: 10px;
   left: 30%;
   transform: translateX(-50%);
 }
